--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,42 @@
 .splide__arrow--next {
   right: -2rem;
 }
+
+.custom-arrows {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+  pointer-events: none;
+}
+
+.custom-prev,
+.custom-next {
+  background-color: white;
+  border-radius: 50%;
+  color: white;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: auto;
+  transition: background-color 0.3s;
+  cursor: pointer;
+  z-index: 20;
+}
+
+.custom-prev {
+  left: -25px; /* Adjust this value to control distance from the left */
+}
+
+.custom-next {
+  right: -25px; /* Adjust this value to control distance from the right */
+}
+
+.custom-prev:hover,
+.custom-next:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
