--- a/src/index.css
+++ b/src/index.css
@@ -194,3 +194,19 @@
       0 0 40px rgba(224, 36, 36, 0.8);
   }
 }
+
+.boxshadow {
+  box-shadow:
+    0 0 5px #03e9f4,
+    0 0 25px #03e9f4,
+    0 0 50px #03e9f4,
+    0 0 100px #03e9f4;
+}
+
+.link {
+  @apply rounded border-2 border-[#03e9f4] px-[22px] py-[7px] text-[16px] uppercase tracking-[1px] text-black dark:text-[#f1f9f9];
+}
+
+.link:hover {
+  @apply boxshadow bg-[#03e9f4] text-white;
+}
