--- a/src/index.css
+++ b/src/index.css
@@ -210,3 +210,38 @@
 .link:hover {
   @apply boxshadow bg-[#03e9f4] text-white;
 }
+
+@keyframes rgbBlink {
+  0% {
+    box-shadow:
+      0 0 5px #ff0000,
+      0 0 25px #ff0000,
+      0 0 50px #ff0000,
+      0 0 100px #ff0000;
+  }
+  33% {
+    box-shadow:
+      0 0 5px #00ff00,
+      0 0 25px #00ff00,
+      0 0 50px #00ff00,
+      0 0 100px #00ff00;
+  }
+  66% {
+    box-shadow:
+      0 0 5px #0000ff,
+      0 0 25px #0000ff,
+      0 0 50px #0000ff,
+      0 0 100px #0000ff;
+  }
+  100% {
+    box-shadow:
+      0 0 5px #ff0000,
+      0 0 25px #ff0000,
+      0 0 50px #ff0000,
+      0 0 100px #ff0000;
+  }
+}
+
+.boxshadow4 {
+  animation: rgbBlink 2s infinite;
+}
