--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ body {
   display: flex;
   justify-content: space-between;
   pointer-events: none;
+  z-index: 10;
 }
 
 .custom-prev,
@@ -173,6 +174,20 @@ body {
 .custom-prev:hover,
 .custom-next:hover {
   background-color: rgba(216, 216, 216, 0.7);
+}
+
+@media screen and (max-width: 1280px) {
+  .custom-prev {
+    left: 0;
+    width: 40px;
+    height: 40px;
+  }
+
+  .custom-next {
+    right: 0;
+    width: 40px;
+    height: 40px;
+  }
 }
 
 @keyframes rgbGlow {
